--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .app-wrapper {
   display: grid;
 width: 1200px;
-  height: 600px;
+  /*height: 600px;*/
   margin: auto;
   grid-template-areas:
 'hea hea'
@@ -9,6 +9,13 @@ width: 1200px;
   grid-template-rows: 60px 1fr;
   grid-template-columns:2fr 10fr;
   /*grid-gap: 10px;*/
+  background-color: chartreuse;
+}
+
+
+
+.app-wrapper-dia {
+  color: #cd14f1;
 }
 
 
