--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,17 +1,12 @@
-.contentex{
+.contentPrInf{
     grid-area: cea;
     /*background-color: chartreuse;*/
-    margin-top: 20px;
+
 }
-.contentex img {
+.contentPrInf img {
     width: 500px;
     height: 300px;
 }
 .item {
     color: darkblue;
-}
-.button {
-    height: 30px;
-    color: red;
-    font-family: "MV Boli";
 }
